fix(apply/style): space "other skills" hint text more readably

--- a/css/per-page/apply.css
+++ b/css/per-page/apply.css
@@ -72,6 +72,11 @@ form p:has(> #otherSkills) {
 	flex-direction: column;
 }
 
+#other-hint {
+	line-height: 1.5;
+	margin-top: 0.5em;
+}
+
 form .action-buttons button {
 	flex-basis: initial;
 	flex-grow: 0;
